--- a/src/app.postcss
+++ b/src/app.postcss
@@ -3,6 +3,19 @@
 @tailwind components;
 @tailwind utilities;
 
+/* TODO: Import fonts if needed */
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap'); */
+
+/* CSS variables */
+
 @layer base {
-  /* TODO: Defaults. Colors, fonts, etc. */
+  /* TODO: Defaults. Apply colors on elements, global fonts, etc. Keep colors in sync with tailwind.config.cjs */
+  html {
+    /* font-family: system-ui; */
+    /* Set rem base scaling which depends on root el & html is root el, use rem/em to set as px is inaccessible.
+    Please convert challenge requirements to rem and remove these comments
+    (default html font-size = 16px)
+    0.875rem / 16px = 14px, once set 1rem = 14px */
+    /* font-size: 0.875rem; */
+  }
 }
