--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,4 +1,12 @@
+/* TODO: Import fonts if needed */
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Orelega+One&display=swap'); */
 /* Write your global styles here, in PostCSS syntax */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* TODO: Set globals, CSS variables here */
+
+@layer base {
+  font-family: system-ui;
+}
